many little fixes; added saml isPassive support; see diff
git-svn-id: svn://svn.code.sf.net/p/asimba/code/trunk@10 2aca1b3b-1dd8-4678-8513-65c153b8ef79